Fixed consistent text wrapping on floating elements

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -132,11 +132,12 @@ a {
 // 16/01/2023 GF: The container max width seems to change at different breakpoints.
 // Solution: Remove different sizes and work with vw and margins in section > container.
 
-.section {
-  .container {
-    max-width: 100vw;
-  }
-}
+// .section {
+//   .container {
+//     // max-width: 100vw;
+//     max-width: 100%;
+//   }
+// }
 
 .content {
   box-sizing: content-box;
@@ -301,7 +302,8 @@ footer,
   &.media-right,
   &.media-center {
     float: unset;
-    max-width: 30vw;
+    // max-width: 30vw;
+    max-width: 30%;
   }
 
   &.media-left {
@@ -360,13 +362,15 @@ footer,
       box-sizing: border-box;
       display: inline-block;
       margin-top: .625rem;
-      width: 57vw;
+      // width: 57vw;
+      width: 57%;
     }
 
     + blockquote,
     + * + blockquote {
       box-sizing: border-box;
-      max-width: 55vw;
+      // max-width: 55vw;
+      max-width: 55%;
     }
 
     + * + * + * {
@@ -380,7 +384,8 @@ figcaption {
   font-size: 0.875em;
   line-height: 1.5;
   margin: 0 0 1em;
-  max-width: 30vw;
+  // max-width: 30vw;
+  width: 100% !important;
 
   @include mobile {
     max-width: 100%;
@@ -636,7 +641,7 @@ ul.social_media_block {
 // Box citation
 
 .box-citation {
-  // border-left: 10px solid rgba(lighten($primary, 20%), 0.2);
+  
   border: 1px solid rgba(lighten($primary, 20%), 0.2);
 
   p {
